<resources>
    <string name="app_name">AysenTI App</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_login">Entrar</string>
    <string name="hint_have_account">¿Tienes una cuenta?, </string>
    <string name="hint_create_account">crea una aquí</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_conf_password">Confirmar Contraseña</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_register_account">Crea tu cuenta</string>
    <string name="hint_dias">10</string>
    <string name="hint_texto_dias">Dias atras</string>
    <string name="hint_status">Estado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_home">Home</string>
    <string name="hint_search">Buscar</string>
    <string name="hint_details">Detalle</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_image_detail">Titulo de Collapsing</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transition_image">transitionimage</string>
</resources>
