<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_150dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_picture"
    cardview:cardCornerRadius="@dimen/dimen_4dp"
    android:layout_marginBottom="@dimen/dimen_8dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp"
            android:background="@drawable/back_1"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_image"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/dimen_8dp"
            android:background="@color/colorBackgroundCardLight"
            android:paddingBottom="@dimen/paddingHorizontalLogin">
            <TextView
                android:id="@+id/text_name_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/editTextSize"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_nro_dias_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_dias"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimen_18dp"
                    />
                <TextView
                    android:id="@+id/text_dias_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_texto_dias"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_4dp"
                    android:textSize="@dimen/dimen_18dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/check_status_card"
                    android:button="@drawable/checkbox_status"
                    />
                <TextView
                    android:id="@+id/like_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_status"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimen_18dp"
                    />
           </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>
