<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBar"
        android:fitsSystemWindows="true"
        android:layout_height="@dimen/dimen_256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image_collapsing"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:background="@drawable/back_1"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_16dp"
            android:orientation="vertical">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/user_name_detail"
                      android:textSize="@dimen/editTextSize"
                      android:text="@string/hint_name"
                      android:paddingLeft="@dimen/dimen_16dp"
                      android:paddingRight="@dimen/dimen_16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp"
                android:paddingLeft="@dimen/dimen_16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/like_number_detail"
                    android:textSize="@dimen/dimen_20dp"
                    android:text="10"/>
                <TextView
                    android:id="@+id/second_word_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_20dp"
                    android:text="@string/hint_username"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@android:color/darker_gray"
                />
            <TextView
                android:id="@+id/title_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_20dp"
                android:text="@string/title_image_detail"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/dimen_20dp"
                />
            <TextView
                android:id="@+id/text_content_image_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/dimen_20dp"
                android:paddingLeft="@dimen/dimen_35dp"
                android:paddingRight="@dimen/dimen_35dp"
                />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="@dimen/dimen_16dp"
        app:srcCompat="@drawable/icons8_ok_hand_48"
        app:layout_anchor="@+id/appBar"/>


</android.support.design.widget.CoordinatorLayout>